# openclaw-cloud

./: .dockerignore  .env.example  .gitignore  .sops.yaml  README.md  cluster.example.json  cluster.json  docker-compose.yml  flake.nix  k3d.yaml
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/openclaw_api/: config.py  database.py  deps.py  jobs.py  main.py  models.py  nango_client.py  schemas.py
apps/api/openclaw_api/routes/: analytics.py  auth.py  billing.py  boxes.py  bundles.py  connections.py  internal.py  usage.py
apps/api/openclaw_api/routes/connections/: __init__.py  agent.py  customer.py  providers.py
apps/api/tests/: conftest.py  test_billing.py  test_boxes.py  test_bundles.py  test_connections.py  test_deps.py  test_health.py  test_internal.py  test_schemas.py  test_usage.py
apps/billing-worker/: Dockerfile  pyproject.toml
apps/billing-worker/billing_worker/: config.py  handlers.py  main.py
apps/billing-worker/tests/: conftest.py  test_handlers.py  test_webhook_endpoint.py
apps/browser-proxy/: Dockerfile  package-lock.json  package.json
apps/browser-proxy/src/: auth.js  config.js  internal.js  rewrite.js  server.js  session.js  usage.js
apps/browser-proxy/tests/: proxy.test.js
apps/operator/: Dockerfile  pyproject.toml
apps/operator/openclaw_operator/: config.py  k8s.py  main.py  metrics.py  niches.py  providers.py  tiers.py
apps/operator/openclaw_operator/jobs/: destroy.py  provision.py  reactivate.py  resize.py  suspend.py  update.py  update_connections.py
apps/operator/tests/: conftest.py  test_destroy.py  test_k8s.py  test_main.py  test_provision.py  test_reactivate.py  test_resize.py  test_suspend.py  test_tiers.py  test_update.py  test_update_connections.py
apps/shared/: pyproject.toml
apps/shared/openclaw_shared/: __init__.py  database.py  redis.py
apps/token-proxy/: Dockerfile  package-lock.json  package.json  pyproject.toml  vitest.config.js
apps/token-proxy/src/: auth.js  config.js  internal.js  limits.js  proxy.js  rate-limit.js  server.js  usage.js
apps/token-proxy/tests/: auth.test.js  config.test.js  internal.test.js  limits.test.js  proxy.test.js  rate-limit.test.js  server.test.js  usage.test.js
apps/token-proxy/token_proxy/: auth.py  config.py  internal.py  limits.py  main.py  proxy.py  rate_limit.py  usage.py
apps/web/: Dockerfile  index.html  next.config.mjs  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite-env.d.ts  vite.config.ts
apps/web/messages/: en.json  pt.json
apps/web/src/: main.tsx  middleware.ts  router.tsx
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: bundle-card.tsx  header.tsx  metrics-chart.tsx  niche-card.tsx  pricing-card.tsx  status-badge.tsx  usage-gauge.tsx
apps/web/src/i18n/: index.ts  navigation.tsx
apps/web/src/layouts/: DashboardLayout.tsx  LocaleLayout.tsx
apps/web/src/lib/: api.ts  auth.tsx
apps/web/src/pages/: AdminPage.tsx  AnalyticsPage.tsx  AuthCallbackPage.tsx  ConnectProviderPage.tsx  ConnectionsPage.tsx  HomePage.tsx  (+5 more)
db/: init-multiple-dbs.sh
db/migrations/: 001_initial.sql  002_connections.sql  003_niches.sql  004_browser_sessions.sql  005_analytics.sql  006_auth.sql  007_bundles.sql  alembic.ini  env.py
docs/: 00-overview.md  01-architecture.md  02-onboarding-agent.md  03-provisioning.md  04-token-proxy.md  05-tiers-billing.md  06-kubernetes.md  07-security.md  08-data-model.md  09-roadmap.md  10-connections.md  agent-connections-prompt.md  production-deployment.md
docs/diagrams/: system-overview.md
docs/usecases/: b2b-01-hr-people-ops.md  b2b-02-ceo-executive.md  b2b-03-sales-account-exec.md  b2b-04-operations-manager.md  b2b-05-agency-project-manager.md  b2c-01-marketing-manager.md  b2c-02-real-estate-agent.md  b2c-03-small-business-owner.md  b2c-04-personal-finance.md
images/: openclaw-gateway.nix
k8s/: default.nix  namespaces.nix
k8s/infrastructure/: ingress.nix  postgres.nix  redis.nix
k8s/local/: nodeports.yaml  secrets.yaml
k8s/services/: api.nix  billing-worker.nix  browser-proxy.nix  nango.nix  onboarding-agent.nix  operator.nix  token-proxy.nix  web.nix
nodes/: common.nix  control-plane.nix  server.nix  worker.nix
scripts/: dev-import.sh  dev-setup.sh  gen-secrets.sh  prod-bootstrap.sh
secrets/: cluster.yaml
(+18 files in other folders)
