[project]
name = "openclaw-operator"
version = "0.1.0"
description = "K8s operator for provisioning and managing customer pods"
requires-python = ">=3.11"
dependencies = [
    "kubernetes>=29.0,<31.0",
    "redis>=5.0,<6.0",
    "asyncpg>=0.29,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "httpx>=0.27,<1.0",
    "python-dotenv>=1.0,<2.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "uvicorn>=0.30,<1.0",
    "starlette>=0.37,<1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
