[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openclaw-shared"
version = "0.1.0"
description = "Shared library for OpenClaw Cloud services"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "redis>=5.0",
    "alembic>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["openclaw_shared"]
